# src/main/java/com/frauas/exercisegenerator/controllers/SheetController.java
@@ -4,9 +4,16 @@ import java.util.List;
 
 import com.frauas.exercisegenerator.documents.Sheet;
 import com.frauas.exercisegenerator.dtos.CreateSheetDto;
+import com.frauas.exercisegenerator.helpers.StringHelper;
+import com.frauas.exercisegenerator.services.LatexGeneratorService;
 import com.frauas.exercisegenerator.services.SheetService;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ContentDisposition;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -23,9 +30,32 @@ public class SheetController {
     @Autowired
     private SheetService sheetService;
 
+    @Autowired
+    private LatexGeneratorService latexGeneratorService;
+
     @GetMapping
     public List<Sheet> getAllSheets() {
         return sheetService.getSheets();
+    }
+
+    @GetMapping(path = "/{id}/pdf", produces = MediaType.APPLICATION_PDF_VALUE)
+    public ResponseEntity<byte[]> getSheetPdf(@PathVariable String id) {
+        Sheet sheet = sheetService.getSheetById(id);
+
+        byte[] contents = latexGeneratorService.createSheetPdf(sheet);
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_PDF);
+
+        String filename = StringHelper.toSnakeCase(sheet.getTitle() + ".pdf");
+        headers.setContentDisposition(ContentDisposition
+                .attachment()
+                .filename(filename)
+                .build());
+        headers.setCacheControl("must-revalidate, post-check=0, pre-check=0");
+
+        ResponseEntity<byte[]> response = new ResponseEntity<>(contents, headers, HttpStatus.OK);
+        return response;
     }
 
     @GetMapping("/{id}")
